# os

./: .travis.yml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: gdt.rs  interrupt.rs  interrupts.rs  io.rs  keyboard.rs  lib.rs  logging.rs  main.rs  memory.rs  qemu.rs  serial.rs  sync.rs  task.rs  test.rs  testing.rs  vga_buffer.rs
src/interrupt/: handlers.rs
src/interrupts/: handlers.rs
src/io/: macros.rs  serial.rs  vga.rs  vga_buffer.rs
src/io/serial/: macros.rs
src/io/vga/: color.rs
src/io/vga_buffer/: macros.rs  tests.rs
src/keyboard/: ps2.rs
src/memory/: allocator.rs  bump_allocator.rs  fixed_size_block_allocator.rs  frame_allocator.rs  heap.rs  heap_allocator.rs  linked_list_allocator.rs  pool_allocator.rs
src/serial/: macros.rs
src/task/: basic_executor.rs  executor.rs  scancode_queue.rs
tests/: basic_boot.rs  basic_output.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
