[package]
name = "os"
version = "0.1.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio", 
    "-display", "none",
]
test-success-exit-code = 33 # Since (0x10 << 1) | 1 = 33
test-timeout = 300

[dependencies]
bootloader = { version = "0.9.0", features = ["map_physical_memory"] }
conquer-once = { version = "0.3.0", default-features = false }
crossbeam-queue = { version = "0.3.0", default-features = false, features = ["alloc", "nightly"] }
futures-util = { version = "0.3.0", default-features = false, features = ["alloc"] }
linked_list_allocator = "0.9.0"
log = "0.4.0"
pc-keyboard = "0.5.0"
pic8259 = "0.10.0"
ps2 = { git = "https://github.com/lucis-fluxum/ps2-rs", tag = "v0.2.0" }
spinning_top = { version = "0.2.0", features = ["nightly"] }
tinypci = { git = "https://github.com/trashbyte/tinypci", default-features = false }
uart_16550 = "0.2.0"
# TODO: volatile 0.4.0 is rewritten to use references instead of owned values
volatile = "0.3.0"
x86_64 = "0.14.0"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
